--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 </div>
             </div>
         </div>
+        <div id="prototypeImage"><img class="prototypeImage" src="img\prototype.gif"/></div>
     </div>
     <!-- slider_area_end -->
 
@@ -132,7 +133,7 @@
                                 <h5 class="mb-0">
                                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
                                         aria-expanded="false" aria-controls="collapseOne">
-                                        <img src="img/barnd/info.png" alt="">How will Nopioid be able to help me to get and stay sober?
+                                        <img src="img/barnd/info.png" alt="">How will Nopioid help me to get and stay sober?
                                     </button>
                                 </h5>
                             </div>
@@ -172,7 +173,7 @@
                             <div id="collapse_4" class="collapse" aria-labelledby="heading_4" data-parent="#accordion"
                                 style="">
                                 <div class="card-body">
-                                    Nopioid is a semester long project, it may or may not every be available.
+                                    Nopioid is a semester long project, it may or may not ever be available.
                                 </div>
                             </div>
                         </div>
