--- a/signupform.html
+++ b/signupform.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
 
+    <link rel="stylesheet" href="./css/leonardo-ui.css"/>
     <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -48,19 +49,21 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="#">Forms <i class="ti-angle-down"></i></a>
+                                        <li><a href="index.html">home</a></li>
+                                        <li><a  class="active" href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
+                                                <li><a href="single-blog.html">single-blog</a></li>
                                             </ul>
                                         </li>
+                                        <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
                         </div>
                         <div class="col-xl-2 col-lg-2 d-none d-lg-block">
                             <div class="buy_ticket">
-                                <a href="signupform.html" class="boxed-btn-white">Get Notified</a>
+                                <a style="display: none;" class="boxed-btn-white">Get the App</a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -74,116 +77,50 @@
     <!-- header-end -->
 
     <!-- slider_area_start -->
-    <div class="slider_area slider_bg_1">
-        <div class="slider_text">
-            <div class="container">
-                <div class="position_relv">
-                    <div class="row">
-                        <div class="col-xl-9">
-                            <div class="title_text">
-                                <h3>Your trusted guide to<br>
-                                    Recovery</h3>
-                                <a href="signupform.html" class="boxed-btn-white">Get Notified</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="prototypeImage"><img class="prototypeImage" src="img\prototype.gif"/></div>
+    <div class="slider_area1 slider_bg_1">
     </div>
     <!-- slider_area_end -->
 
     <!-- faq_area_Start -->
-    <div class="faq_area">
+    <div class="formSection">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="serction_title_large mb-95">
                         <h3>
-                            Frequently Asked
+                            Sign Up to Get Notified
                         </h3>
+                        <p></p>
+                        <p>Nopiod is currently a work in progress. We are working hard to make the platform available. We are aiming to increase the rate of patient recovery and decrease the rate of relapse in an attempt to decrease the impact of the Opioid Crisis. Nopioid is meant to simplify the process of looking for next steps in a patient recovery pathway, while providing accurate and viable options. The product is primarily meant to be put in the hands of healthcare institutions so that they can effectively increase the turnover rate of their patients while guaranteeing a successful and healthy life for their patients. </p>
+                        <p>If you are interested in Nopioid and want to take it to the next step, kindly sign up to be notified about the product once it becomes available.</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <div id="accordion">
-                        <div class="card">
-                            <div class="card-header" id="headingTwo">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
-                                        data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-
-                                        <img src="img/barnd/info.png" alt=""> How might we combat the opioid crisis and related presciption drug issues?
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion"
-                                style="">
-                                <div class="card-body">
-                                    For an opioid addict, finding personalized resources for medication can be challenging.
-                                    From our research and patient interviews, we found that the current system is complicated.
-                                    We are building an application that will help people navigate the system and ensure a good path to recovery.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingOne">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
-                                        aria-expanded="false" aria-controls="collapseOne">
-                                        <img src="img/barnd/info.png" alt="">How will Nopioid help me to get and stay sober?
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-                                data-parent="#accordion" style="">
-                                <div class="card-body">
-                                    Nopioid is an app that customizes care information based on the patient. With an intuitive interface, the patient and their care providers have information they need. No more looking around! We have trained machine learning algorithms on patient data to create a personalized guide for the patients. Nopioid provides information for every stage of the process - medication, detox, rehab, treatment plan, and sober living.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="headingThree">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
-                                        data-target="#collapseThree" aria-expanded="false"
-                                        aria-controls="collapseThree">
-                                        <img src="img/barnd/info.png" alt=""> Which platforms will you support?
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                                data-parent="#accordion" style="">
-                                <div class="card-body">
-                                    We will be offering Nopioid on Android, iOS and Web.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="heading_4">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
-                                        data-target="#collapse_4" aria-expanded="false" aria-controls="collapse_4">
-                                        <img src="img/barnd/info.png" alt=""> When will Nopioid be available?
-                                    </button>
-                                </h5>
-                            </div>
-                            <div id="collapse_4" class="collapse" aria-labelledby="heading_4" data-parent="#accordion"
-                                style="">
-                                <div class="card-body">
-                                    Nopioid is a semester long project, it may or may not ever be available.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div id="questionArea">
+              <div class="formQuestion"><h2>First Name</h2><input id="firstname" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
+              <div class="formQuestion"><h2>Last Name</h2><input id="lastname" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
+              <div class="formQuestion"><h2>Email</h2><input id="email" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
+              <div class="formQuestion"><h2>Client Type</h2><select id="clienttype" class="lui-select  lui-select--large"><option value="0" selected>Not Selected</option><option value="1">Patient</option><option value="2">Healthcare Provider</option></select><p class="inputerror">This is a mandatory field</p></div><br/>
+              <div class="formQuestion"><h2>Phone Number</h2><input id="phonenumber" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
+              <div class="formQuestion">
+                <label class="lui-checkbox">
+                  <input class="lui-checkbox__input" type="checkbox" aria-label="Label" />
+                  <div class="lui-checkbox__check-wrap">
+                    <span class="lui-checkbox__check"></span>
+                    <span class="lui-checkbox__check-text">I hereby agree to receiving email/text notifications on Nopioid</span>
+                  </div>
+                </label>
+                <p class="inputerror">This is a mandatory field</p>
+              </div><br/>
+              <div class="formQuestion action">
+                <p class="inputerror" id="submiterror">There was an error submitting the data.</p>
+                <button class="lui-button-big">Sign Up</button>
+              </div><br/>
             </div>
         </div>
     </div>
     <!-- faq_area_end -->
-    
+
     <!-- footer_start -->
     <footer class="footer footer_bg_1">
         <div class="circle_ball d-none d-lg-block">
@@ -234,10 +171,37 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
 
 
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCBJehn1x9TRi8o9sD947Y8JIKI5niZb1w",
+        authDomain: "nopioid-c9618.firebaseapp.com",
+        databaseURL: "https://nopioid-c9618.firebaseio.com",
+        projectId: "nopioid-c9618",
+        storageBucket: "nopioid-c9618.appspot.com",
+        messagingSenderId: "993898990420",
+        appId: "1:993898990420:web:90cfaea25871b3a39d56c1",
+        measurementId: "G-9SL7LZ5NFE"
+      };
+
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+      var database = firebase.database();
+    </script>
 
 
     <!-- JS here -->
+    <script src="js/leonardo-ui.js"></script>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -265,7 +229,7 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <script src="js/mail-script.js"></script>
 
     <script src="js/main.js"></script>
-
+    <script src="js/dynamicform.js"></script>
 </body>
 
 </html>
