--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="css/all.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -48,12 +49,13 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">home</a></li>
+                                        <li><a class="active" href="index.html">Home</a></li>
                                         <li><a href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
                                             </ul>
                                         </li>
+                                        <li><a href="login.html">Login</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -183,7 +185,7 @@
         </div>
     </div>
     <!-- faq_area_end -->
-    
+
     <!-- footer_start -->
     <footer class="footer footer_bg_1">
         <div class="circle_ball d-none d-lg-block">
