--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -62,7 +63,7 @@
                         </div>
                         <div class="col-xl-2 col-lg-2 d-none d-lg-block">
                             <div class="buy_ticket">
-                                <a style="display: none;" class="boxed-btn-white">Get the App</a>
+                                <a href="signupform.html" class="boxed-btn-white">Get Notified</a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -81,42 +82,48 @@
     <!-- slider_area_end -->
 
     <!-- faq_area_Start -->
-    <div class="formSection">
+    <div class="formSection" id="loginForm">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="serction_title_large mb-95">
                         <h3>
-                            Sign Up to Get Notified
+                            Login
                         </h3>
-                        <p></p>
-                        <p>Nopiod is currently a work in progress. We are working hard to make the platform available. We are aiming to increase the rate of patient recovery and decrease the rate of relapse in an attempt to decrease the impact of the Opioid Crisis. Nopioid is meant to simplify the process of looking for next steps in a patient recovery pathway, while providing accurate and viable options. The product is primarily meant to be put in the hands of healthcare institutions so that they can effectively increase the turnover rate of their patients while guaranteeing a successful and healthy life for their patients. </p>
-                        <p>If you are interested in Nopioid and want to take it to the next step, kindly sign up to be notified about the product once it becomes available.</p>
                     </div>
                 </div>
             </div>
             <div id="questionArea">
-              <div class="formQuestion"><h2>First Name</h2><input id="firstname" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
-              <div class="formQuestion"><h2>Last Name</h2><input id="lastname" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
-              <div class="formQuestion"><h2>Email</h2><input id="email" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
-              <div class="formQuestion"><h2>Client Type</h2><select id="clienttype" class="lui-select  lui-select--large"><option value="0" selected>Not Selected</option><option value="1">Patient</option><option value="2">Healthcare Provider</option></select><p class="inputerror">This is a mandatory field</p></div><br/>
-              <div class="formQuestion"><h2>Phone Number</h2><input id="phonenumber" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
-              <div class="formQuestion">
-                <label class="lui-checkbox">
-                  <input class="lui-checkbox__input" type="checkbox" aria-label="Label" />
-                  <div class="lui-checkbox__check-wrap">
-                    <span class="lui-checkbox__check"></span>
-                    <span class="lui-checkbox__check-text">I hereby agree to receiving email/text notifications on Nopioid</span>
-                  </div>
-                </label>
-                <p class="inputerror">This is a mandatory field</p>
-              </div><br/>
-              <div class="formQuestion action">
-                <p class="inputerror" id="submiterror">There was an error submitting the data.</p>
-                <button class="lui-button-big">Sign Up</button>
-              </div><br/>
+                <div class="formQuestion"><h2>User</h2><input id="username" class="lui-input  lui-input--large"/></div><br/>
+                <div class="formQuestion"><h2>Password</h2><input id="password" class="lui-input  lui-input--large"/></div><br/>
+                <div class="formQuestion action">
+                  <p class="inputerror" id="loginerror">The username or password is incorrect.</p>
+                  <button class="lui-button-big" id="loginButton">Login</button>
+                </div>
             </div>
-        </div>
+      </div>
+    </div>
+        <!-- faq_area_Start -->
+    <div class="formSection" id="dynamicFormSettings">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="serction_title_large mb-95">
+                        <h3>
+                            Dynamic Form Settings
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <div id="questionArea">
+                <div class="formQuestion"><h2>Add new questions</h2><input id="newquestion" class="lui-input  lui-input--large"/></div><br/>
+                <div class="formQuestion action">
+                  <p class="inputerror" id="questionerror">The question is invalid.</p>
+                  <button class="lui-button-big" id="addQuestion">Add</button>
+                </div>
+            </div>
+
+      </div>
     </div>
     <!-- faq_area_end -->
 
@@ -170,37 +177,36 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
 
 
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+             https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
+      <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+          apiKey: "AIzaSyCBJehn1x9TRi8o9sD947Y8JIKI5niZb1w",
+          authDomain: "nopioid-c9618.firebaseapp.com",
+          databaseURL: "https://nopioid-c9618.firebaseio.com",
+          projectId: "nopioid-c9618",
+          storageBucket: "nopioid-c9618.appspot.com",
+          messagingSenderId: "993898990420",
+          appId: "1:993898990420:web:90cfaea25871b3a39d56c1",
+          measurementId: "G-9SL7LZ5NFE"
+        };
 
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyCBJehn1x9TRi8o9sD947Y8JIKI5niZb1w",
-        authDomain: "nopioid-c9618.firebaseapp.com",
-        databaseURL: "https://nopioid-c9618.firebaseio.com",
-        projectId: "nopioid-c9618",
-        storageBucket: "nopioid-c9618.appspot.com",
-        messagingSenderId: "993898990420",
-        appId: "1:993898990420:web:90cfaea25871b3a39d56c1",
-        measurementId: "G-9SL7LZ5NFE"
-      };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        var database = firebase.database();
+      </script>
 
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-      var database = firebase.database();
-    </script>
 
 
     <!-- JS here -->
-    <script src="js/leonardo-ui.js"></script>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -227,7 +233,8 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/mail-script.js"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/login.js"></script>
+
 </body>
 
 </html>
