Updated Mobile UI

--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -49,8 +49,8 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a  class="active" href="#">Forms <i class="ti-angle-down"></i></a>
+                                        <li><a class="active" href="index.html">Home</a></li>
+                                        <li><a href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
                                             </ul>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="col-xl-2 col-lg-2 d-none d-lg-block">
                             <div class="buy_ticket">
-                                <a class="boxed-btn-white">Get the App</a>
+                                <a href="signupform.html" class="boxed-btn-white">Get Notified</a>
                             </div>
                         </div>
                         <div class="col-12">
