--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
                         <div class="card">
                             <div class="card-header" id="headingTwo">
                                 <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                    <button class="btn btn-link collapsed questionButton" data-toggle="collapse"
                                         data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
 
-                                        <img src="img/barnd/info.png" alt=""> How might we combat the opioid crisis and related presciption drug issues?
+                                        <img src="img/barnd/info.png" alt="">
+                                        <div class="questionSpan">How might we combat the opioid crisis and related presciption drug issues?</div>
                                     </button>
                                 </h5>
                             </div>
@@ -133,9 +134,10 @@
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
+                                    <button class="btn btn-link questionButton" data-toggle="collapse" data-target="#collapseOne"
                                         aria-expanded="false" aria-controls="collapseOne">
-                                        <img src="img/barnd/info.png" alt="">How will Nopioid help me to get and stay sober?
+                                        <img src="img/barnd/info.png" alt="">
+                                        <div class="questionSpan">How will Nopioid help me to get and stay sober?</div>
                                     </button>
                                 </h5>
                             </div>
@@ -149,10 +151,11 @@
                         <div class="card">
                             <div class="card-header" id="headingThree">
                                 <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                    <button class="btn btn-link collapsed questionButton" data-toggle="collapse"
                                         data-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        <img src="img/barnd/info.png" alt=""> Which platforms will you support?
+                                        <img src="img/barnd/info.png" alt="">
+                                        <div class="questionSpan">Which platforms will you support?</div>
                                     </button>
                                 </h5>
                             </div>
@@ -166,9 +169,10 @@
                         <div class="card">
                             <div class="card-header" id="heading_4">
                                 <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                    <button class="btn btn-link collapsed questionButton" data-toggle="collapse"
                                         data-target="#collapse_4" aria-expanded="false" aria-controls="collapse_4">
-                                        <img src="img/barnd/info.png" alt=""> When will Nopioid be available?
+                                        <img src="img/barnd/info.png" alt="">
+                                        <div class="questionSpan">When will Nopioid be available?</div>
                                     </button>
                                 </h5>
                             </div>
