--- a/login.html
+++ b/login.html
@@ -50,8 +50,8 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a  class="active" href="#">Forms <i class="ti-angle-down"></i></a>
+                                        <li><a class="active" href="index.html">Home</a></li>
+                                        <li><a href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
                                             </ul>
@@ -233,6 +233,7 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/mail-script.js"></script>
 
+    <script src="js/main.js"></script>
     <script src="js/login.js"></script>
 
 </body>
