--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- slider_area_start -->
     <div class="slider_area slider_bg_1">
         <div class="slider_text">
-            <div class="container">
+            <div class="container slider">
                 <div class="position_relv">
                     <div class="row">
                         <div class="col-xl-9">
