Updated Admin details

--- a/signupform.html
+++ b/signupform.html
@@ -100,7 +100,7 @@
               <div class="formQuestion"><h2>Last Name</h2><input id="lastname" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
               <div class="formQuestion"><h2>Email</h2><input id="email" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
               <div class="formQuestion"><h2>Client Type</h2><select id="clienttype" class="lui-select  lui-select--large"><option value="0" selected>Not Selected</option><option value="1">Patient</option><option value="2">Healthcare Provider</option></select><p class="inputerror">This is a mandatory field</p></div><br/>
-              <div class="formQuestion"><h2>Phone Number</h2><input id="phonenumber" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
+              <div class="formQuestion"><h2>Phone Number</h2><input placeholder="123-456-7890" id="phonenumber" class="lui-input  lui-input--large"/><p class="inputerror">This is a mandatory field</p></div><br/>
               <div class="formQuestion">
                 <label class="lui-checkbox">
                   <input class="lui-checkbox__input" type="checkbox" aria-label="Label" />
@@ -228,6 +228,7 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <script src="js/mail-script.js"></script>
 
     <script src="js/main.js"></script>
+    <script src="js/signupform.js"></script>
 </body>
 
 </html>
