--- a/login.html
+++ b/login.html
@@ -126,6 +126,25 @@
       </div>
     </div>
     <!-- faq_area_end -->
+        <!-- faq_area_Start -->
+    <div class="formSection" id="signup-form-details">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="serction_title_large mb-95">
+                        <h3>
+                            Sign Up Form Replies
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <div class="signup-detail-container">
+                
+            </div>
+
+      </div>
+    </div>
+    <!-- faq_area_end -->
 
     <!-- footer_start -->
     <footer class="footer footer_bg_1">
