Added Form Statistics

--- a/login.html
+++ b/login.html
@@ -139,7 +139,29 @@
                 </div>
             </div>
             <div class="signup-detail-container">
-                
+
+            </div>
+
+      </div>
+    </div>
+    <!-- faq_area_end -->
+        <!-- faq_area_Start -->
+    <div class="formSection" id="dynamic-form-details">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="serction_title_large mb-95">
+                        <h3>
+                            Dynamic Form Statistics
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <div class="dynamic-form-detail-container">
+              <div class="averageContainer">
+                <h2>Optimal Number of Questions</h2><br/>
+              <div class="baloonAverage"></div></div>
+              <canvas id="myChart" width="400" height="400"></canvas>
             </div>
 
       </div>
@@ -254,6 +276,7 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
 
     <script src="js/main.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/Chart.min.js"></script>
 
 </body>
 
