Made input password

--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
             </div>
             <div id="questionArea">
                 <div class="formQuestion"><h2>User</h2><input id="username" class="lui-input  lui-input--large"/></div><br/>
-                <div class="formQuestion"><h2>Password</h2><input id="password" class="lui-input  lui-input--large"/></div><br/>
+                <div class="formQuestion"><h2>Password</h2><input type="password" id="password" class="lui-input  lui-input--large"/></div><br/>
                 <div class="formQuestion action">
                   <p class="inputerror" id="loginerror">The username or password is incorrect.</p>
                   <button class="lui-button-big" id="loginButton">Login</button>
