--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                         <li><a href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
+                                                <li><a href="patientprofiles.html">Patient Profiles</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="login.html">Login</a></li>
