--- a/patientprofiles.html
+++ b/patientprofiles.html
@@ -24,7 +24,6 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/login.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -54,6 +53,7 @@
                                         <li><a href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
+                                                <li><a href="patientprofiles.html">Patient Profiles</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="login.html">Login</a></li>
@@ -82,120 +82,19 @@
     <!-- slider_area_end -->
 
     <!-- faq_area_Start -->
-    <div class="formSection" id="loginForm">
+    <div class="formSection">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="serction_title_large mb-95">
                         <h3>
-                            Login
+                            Patients
                         </h3>
                     </div>
                 </div>
             </div>
             <div id="questionArea">
-                <div class="formQuestion"><h2>User</h2><input id="username" class="lui-input  lui-input--large"/></div><br/>
-                <div class="formQuestion"><h2>Password</h2><input type="password" id="password" class="lui-input  lui-input--large"/></div><br/>
-                <div class="formQuestion action">
-                  <p class="inputerror" id="loginerror">The username or password is incorrect.</p>
-                  <button class="lui-button-big" id="loginButton">Login</button>
-                </div>
-            </div>
-      </div>
-    </div>
-        <!-- faq_area_Start -->
-    <div class="formSection" id="dynamicFormSettings">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="serction_title_large mb-95">
-                        <h3>
-                            Dynamic Form Settings
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <div id="questionArea">
-                <div class="formQuestion"><h2>Add new questions</h2><input id="newquestion" class="lui-input  lui-input--large"/></div><br/>
-                <div class="formQuestion action">
-                  <p class="inputerror" id="questionerror">The question is invalid.</p>
-                  <button class="lui-button-big" id="addQuestion">Add</button>
-                </div>
-            </div>
-
-      </div>
-    </div>
-    <!-- faq_area_end -->
-        <!-- faq_area_Start -->
-    <div class="formSection" id="signup-form-details">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="serction_title_large mb-95">
-                        <h3>
-                            Sign Up Form Replies
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <div class="signup-detail-container">
-
-            </div>
-
-      </div>
-    </div>
-    <!-- faq_area_end -->
-        <!-- faq_area_Start -->
-    <div class="formSection" id="dynamic-form-details">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="serction_title_large mb-95">
-                        <h3>
-                            Dynamic Form Statistics
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <div class="dynamic-form-detail-container">
-              <div class="averageContainer">
-                <h2>Optimal Number of Questions</h2><br/>
-              <div class="baloonAverage"></div></div>
-              <canvas id="myChart" width="400" height="400"></canvas>
-            </div>
-
-      </div>
-    </div>
-    <div class="formSection" id="patient-form-creation">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="serction_title_large mb-95">
-                        <h3>
-                            Sample Patient Creation
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <div id="patientFormArea">
-              <div id="patientFormPropertiesArea">
-                <div class="patientKeyValue">
-                  <div class="patientKeyDiv">
-                    <h2>Property</h2><input class="patientKey lui-input  lui-input--large"/>
-                  </div>
-                  <div class="patientValueDiv">
-                    <h2>Detail</h2><input class="patientValue lui-input  lui-input--large"/>
-                  </div>
-                </div><br/>
-              </div>
-                <div class="formQuestion action">
-                  <p class="inputerror" id="addPropertyError">Could not create a patient.</p>
-                  <button class="lui-button-big" id="addProperty">Add Property</button>
-                  <br/>
-                  <button class="lui-button-big" id="createPatient">Create Patient</button>
-                </div>
-            </div>
-
+        </div>
       </div>
     </div>
     <!-- faq_area_end -->
@@ -249,33 +148,33 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <!-- footer_end -->
 
 
+            <!-- The core Firebase JS SDK is always required and must be listed first -->
+            <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
 
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+            <!-- TODO: Add SDKs for Firebase products that you want to use
+                 https://firebase.google.com/docs/web/setup#available-libraries -->
+            <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
+          <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+              apiKey: "AIzaSyCBJehn1x9TRi8o9sD947Y8JIKI5niZb1w",
+              authDomain: "nopioid-c9618.firebaseapp.com",
+              databaseURL: "https://nopioid-c9618.firebaseio.com",
+              projectId: "nopioid-c9618",
+              storageBucket: "nopioid-c9618.appspot.com",
+              messagingSenderId: "993898990420",
+              appId: "1:993898990420:web:90cfaea25871b3a39d56c1",
+              measurementId: "G-9SL7LZ5NFE"
+            };
 
-        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
-        <!-- TODO: Add SDKs for Firebase products that you want to use
-             https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
-      <script>
-        // Your web app's Firebase configuration
-        var firebaseConfig = {
-          apiKey: "AIzaSyCBJehn1x9TRi8o9sD947Y8JIKI5niZb1w",
-          authDomain: "nopioid-c9618.firebaseapp.com",
-          databaseURL: "https://nopioid-c9618.firebaseio.com",
-          projectId: "nopioid-c9618",
-          storageBucket: "nopioid-c9618.appspot.com",
-          messagingSenderId: "993898990420",
-          appId: "1:993898990420:web:90cfaea25871b3a39d56c1",
-          measurementId: "G-9SL7LZ5NFE"
-        };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+            var database = firebase.database();
+          </script>
 
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-        var database = firebase.database();
-      </script>
 
 
 
@@ -307,8 +206,7 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <script src="js/mail-script.js"></script>
 
     <script src="js/main.js"></script>
-    <script src="js/login.js"></script>
-    <script src="js/Chart.min.js"></script>
+    <!-- <script src="js/dynamicform.js"></script> -->
 
 </body>
 
