--- a/patientprofiles.html
+++ b/patientprofiles.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/patientprofiles.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -93,7 +94,9 @@
                     </div>
                 </div>
             </div>
-            <div id="questionArea">
+            <div class="patients-detail-container">
+
+            </div>
         </div>
       </div>
     </div>
@@ -206,7 +209,7 @@ Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</scrip
     <script src="js/mail-script.js"></script>
 
     <script src="js/main.js"></script>
-    <!-- <script src="js/dynamicform.js"></script> -->
+    <script src="js/patientprofiles.js"></script>
 
 </body>
 
