--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -49,8 +49,8 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">Home</a></li>
-                                        <li><a href="#">Forms <i class="ti-angle-down"></i></a>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a class="active" href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
                                                 <li><a href="patientprofiles.html">Patient Profiles</a></li>
