--- a/login.html
+++ b/login.html
@@ -50,14 +50,14 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="#">Forms <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="dynamicForm.html">Dynamic Form</a></li>
                                                 <li><a href="patientprofiles.html">Patient Profiles</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="login.html">Login</a></li>
+                                        <li><a class="active" href="login.html">Login</a></li>
                                     </ul>
                                 </nav>
                             </div>
