--- a/signupform.html
+++ b/signupform.html
@@ -91,7 +91,7 @@
                             Sign Up to Get Notified
                         </h3>
                         <p></p>
-                        <p>Nopiod is currently a work in progress. We are working hard to make the platform available. We are aiming to increase the rate of patient recovery and decrease the rate of relapse in an attempt to decrease the impact of the Opioid Crisis. Nopioid is meant to simplify the process of looking for next steps in a patient recovery pathway, while providing accurate and viable options. The product is primarily meant to be put in the hands of healthcare institutions so that they can effectively increase the turnover rate of their patients while guaranteeing a successful and healthy life for their patients. </p>
+                        <p>Nopioid is a machine learning platform to assist healthcare institutions with finding next-step treatment recommendations for Opioid addicted patients. We give healthcare providers and staff accurate, viable, and personalized treatment options in their patients’ recovery pathway to enable them to best care for their patients. The algorithm reduces doctors’ time spent on administrative work and research, giving them maximal time to spend in the exam room with the patient to keep them on their sober journey. Overcoming Opioid addiction is a complex journey. We help navigate.</p>
                         <p>If you are interested in Nopioid and want to take it to the next step, kindly sign up to be notified about the product once it becomes available.</p>
                     </div>
                 </div>
