--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="col-xl-2 col-lg-2 d-none d-lg-block">
                             <div class="buy_ticket">
-                                <a href="signupform.html" class="boxed-btn-white">Get Notified</a>
+                                <a href="./files/nopioid-build-beta-1.apk" class="boxed-btn-white">Get Notified</a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -86,7 +86,7 @@
                             <div class="title_text">
                                 <h3>Your trusted guide to<br>
                                     Recovery</h3>
-                                <a href="signupform.html" class="boxed-btn-white">Get Notified</a>
+                                <a href="./files/nopioid-build-beta-1.apk" class="boxed-btn-white">Get Notified</a>
                             </div>
                         </div>
                     </div>
