added privacy policy

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <div class="col-xl-12">
                             <p class="copy_right text-center">
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+Copyright Nopioid &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved, <a href="privacyPolicy.html">Privacy Policy</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
