--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
             <h1 id="colorlib-logo">
               <a href="index.html">Philippe El Asmar</a>
             </h1>
-            <span class="position"
-              ><b>Software Development Engineer</b> at AWS</span
-            >
+            <span class="position"><b>Software Engineer</b> at AWS</span>
           </div>
           <nav id="colorlib-main-menu" role="navigation" class="navbar">
             <div id="navbar" class="collapse">
